Add ignored files

--- a/index.html
+++ b/index.html
@@ -650,10 +650,10 @@
         <a class="copyright right" href="https://t.me/a11yminsk">Telegram Chat</a>
     </section>
 
-    <section class="slide">
+    <!--section class="slide">
         <img src="pictures/cource.png" class="cover" alt="">
         <a class="copyright right" href="https://kurmak.info/">Ссылка на курс</a>
-    </section>
+    </section-->
 
     <section class="slide">
         <h2>Спасибо!</h2>
