--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="slide clear" id="cover">
-        <h2>Цвет настроения</h2>
+        <h2>Цвета в доступности</h2>
         <p>Глафира Жур</p>
         <img class="cover" role="presentation" src="pictures/title169.png" alt="">
     </section>
