--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- TODO бэк конференции -->
 
     <header class="caption">
-        <h1>Цвет настроения</h1>
+        <h1>Цвета в доступности</h1>
         <p>Глафира Жур, SpurIT</p>
     </header>
 
