--- a/index.html
+++ b/index.html
@@ -344,6 +344,26 @@
     </section>
 
     <section class="slide clear">
+        <h2 class="shout">Цвета</h2>
+    </section>
+
+    <section class="slide">
+        <h2>Красный / Зелёный</h2>
+        <img src="pictures/colors.png" style="width: 450px; display: block; margin: 0 auto;" alt="">
+   </section>
+
+    <section class="slide">
+        <h2>Красный / Зелёный</h2>
+        <br>
+        <br>
+        <img src="pictures/colors2.png" style="width: 700px; display: block; margin: 0 auto;" alt="">
+    </section>
+
+    <section class="slide">
+        <img src="pictures/colors3.png" style="width: 450px; display: block; margin: 0 auto;" alt="">
+    </section>
+
+    <section class="slide clear">
         <h2 class="shout">Контраст</h2>
     </section>
 
