add ehu lecture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <section class="slide clear" id="cover">
         <h2>Цвета в доступности</h2>
         <p>Глафира Жур</p>
-        <img class="cover" role="presentation" src="pictures/index-slide.png" alt="">
     </section>
 
     <section class="slide">
@@ -31,9 +30,10 @@
             <div>
                 <h2>Глафира Жур</h2>
                 <div>
-                    <p class="info-text-no-margin">Frontend Team Lead и главный a11y-котик в&nbsp;<img class="spurit-logo" src="pictures/spurit.png" alt="spurit logo"></p>
+                    <p class="info-text-no-margin">Accessibility Project Manager в Semrush</p>
                     <p class="info-text"><strong>Twitter</strong>: <a href="https://twitter.com/glafirazhur"  target="_blank">@GlafiraZhur</a></p>
                     <p class="info-text"><strong>Помогаю делать</strong>: <br><a href="https://twitter.com/a11yminsk" target="_blank">@a11yminsk</a><br><a href="https://twitter.com/MinskCSS" target="_blank">@MinskCSS</a> и <a href="https://twitter.com/MinskJS"  target="_blank">@MinskJS</a></p>
+                    <p class="info-text"><strong>GDE</strong> for Web Technologies</p>
                 </div>
             </div>
         </div>
@@ -196,7 +196,6 @@
 
     <section class="slide">
         <img class="cover" role="presentation" src="pictures/i1.png" alt="">
-        <a class="copyright right" href="https://merehead.com/ru/blog/color-trends-in-web-design-in-2020/">Цветовые тренды 2020</a>
     </section>
 
     <!-- ОЙ А ЧТО СЛУЧИЛОСЬ -->
@@ -247,7 +246,6 @@
     <section class="slide">
         <h2>Наглядно в цифрах</h2>
         <img src="pictures/i72.png" class="cover next" alt="">
-        <a class="copyright right" href="#">Цифры за сентябрь 2020г.</a>
     </section>
 
     <section class="slide">
@@ -680,16 +678,7 @@
         </ul>
     </section>
 
-    <section class="slide">
-        <img src="pictures/a11y.png" class="cover" alt="">
-        <a class="copyright right" href="https://t.me/a11yminsk">Telegram Chat</a>
-    </section>
-
-    <section class="slide">
-        <img src="pictures/kurmak.png" class="cover" alt="">
-        <a class="copyright right" href="https://accessibilityunity.com/">Курс про цифровую доступность</a>
-    </section>
-
+  
     <section class="slide">
         <h2>Спасибо!</h2>
         <br>
